--- a/package.json
+++ b/package.json
@@ -1,24 +1,40 @@
 {
-    "name": "pegavaretas",
-    "displayName": "Pega Varetas",
-    "version": "1.0.0",
-    "description": "Um jeito divertido de contar seus pontos no pega varetas",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "pegavaretas",
+  "displayName": "Pega Varetas",
+  "version": "1.0.0",
+  "description": "Um jeito divertido de contar seus pontos no pega varetas",
+  "main": "index.js",
+  "scripts": {
+    "start": "mobileui preview",
+    "test": "standard"
+  },
+  "author": "Fernando Migliorini Tenório",
+  "license": "MIT",
+  "dependencies": {
+    "cordova-android": "^7.1.0",
+    "cordova-plugin-whitelist": "^1.3.3"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {}
     },
-    "author": "Fernando Migliorini Tenório",
-    "license": "MIT",
-    "dependencies": {
-        "cordova-android": "^7.0.0",
-        "cordova-plugin-whitelist": "^1.3.3"
-    },
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-whitelist": {}
-        },
-        "platforms": [
-            "android"
-        ]
-    }
+    "platforms": [
+      "android"
+    ]
+  },
+  "standard": {
+    "globals": [
+      "MobileUI",
+      "alert",
+      "closeAlert"
+    ],
+    "ignore": [
+      "www/mobileui"
+    ],
+    "fix": true,
+    "cwd": "www/*.js"
+  },
+  "devDependencies": {
+    "standard": "^11.0.1"
+  }
 }
