--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "globals": [
       "MobileUI",
       "alert",
-      "closeAlert"
+      "closeAlert",
+      "closeMenu"
     ],
     "ignore": [
       "www/mobileui"
