--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "license": "MIT",
   "dependencies": {
     "cordova-android": "^7.1.0",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "android"
@@ -27,7 +29,8 @@
       "MobileUI",
       "alert",
       "closeAlert",
-      "closeMenu"
+      "closeMenu",
+      "cordova"
     ],
     "ignore": [
       "www/mobileui"
