--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "cordova-android": "^7.1.0",
+    "cordova-browser": "^5.0.3",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3"
   },
@@ -21,7 +22,8 @@
       "cordova-plugin-statusbar": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   },
   "standard": {
@@ -30,7 +32,8 @@
       "alert",
       "closeAlert",
       "closeMenu",
-      "cordova"
+      "cordova",
+      "StatusBar"
     ],
     "ignore": [
       "www/mobileui"
