WIP: config game page

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
       "closeAlert",
       "closeMenu",
       "cordova",
-      "StatusBar"
+      "StatusBar",
+      "backPage"
     ],
     "ignore": [
       "www/mobileui"
