--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "author": "Fernando Migliorini Tenório",
   "license": "MIT",
   "dependencies": {
-    "cordova-android": "^7.1.1",
-    "cordova-browser": "^5.0.4",
+    "cordova-android": "^7.0.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3"
@@ -25,8 +24,7 @@
       "cordova-plugin-splashscreen": {}
     },
     "platforms": [
-      "android",
-      "browser"
+      "android"
     ]
   },
   "standard": {
