--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cordova-android": "^7.0.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3"
+    "cordova-plugin-whitelist": "^1.3.3",
+    "mobileui": "^1.1.18"
   },
   "cordova": {
     "plugins": {
