--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "mobileui": "^1.1.18"
+    "mobileui": "^1.1.18",
+    "lodash": ">=4.17.11"
   },
   "cordova": {
     "plugins": {
